--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a class="nav-link active" aria-current="page" href="review.html">Reviews</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Offers</a>
+                        <a class="nav-link active" aria-current="page" href="offer.html">Offers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Blogs</a>
