--- a/offer.html
+++ b/offer.html
@@ -77,6 +77,28 @@
     </nav>
     <!-- Navbar section -->
     <!-- Footer section -->
+    <footer>
+        <div class="container py-5">
+            <div class="links text-center">
+                <a class="text-decoration-none text-dark p-3" href="#">About</a>
+                <a class="text-decoration-none text-dark p-3" href="#">FAQs</a>
+                <a class="text-decoration-none text-dark p-3" href="#">Contact</a>
+                <a class="text-decoration-none text-dark p-3" href="#">Disclaimer</a>
+                <a class="text-decoration-none text-dark p-3" href="#">Privacy</a>
+                <a class="text-decoration-none text-dark p-3" href="#">Terms of use</a>
+                <a class="text-decoration-none text-dark p-3" href="#">Accessibility</a>
+            </div>
+            <div class="social-media-icons text-center py-5">
+              <a class="text-decoration-none text-dark py-5" href="#"><i class="fa-brands fa-facebook"></i></a>  
+            </div>
+            <div class="copyright text-center">
+                <span>&copy; 2021 XDezo Academy. Al Rights Reserved</span>
+            </div>
+        </div>
+    </footer>
+
+
+
     <!-- Footer section -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
